Adicionando kafka e evento de passeio cadastrado, e refactor nas pastas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,27 @@
 version: '2.1'
-
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+       - 29092:29092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
@@ -22,11 +43,11 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - "local"
-    
+
   dbadmin:
       container_name: "db-admin"
       image: aaronshaf/dynamodb-admin
-      ports: 
+      ports:
         - "8000:8000"
         - "8001:8001"
       environment:
@@ -38,7 +59,6 @@ services:
       - "localstack"
       networks:
       - "local"
-
 networks:
   local:
     driver: "bridge"
