--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8082
 aws-endpoint=http://localhost:4566
 aws-region=us-west-2
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+
+topico.passeio.criado=PASSEIO_CRIADO
+kafka.bootstrap.address=http://localhost:29092
