--- a/pom.xml
+++ b/pom.xml
@@ -69,14 +69,15 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-spring</artifactId>
-            <version>1.2-groovy-2.4</version>
+            <version>2.0-groovy-3.0</version>
             <scope>test</scope>
         </dependency>
+
 
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>1.2-groovy-2.4</version>
+            <version>2.0-groovy-3.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -84,8 +85,8 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.7</version>
-            <scope>test</scope>
+            <version>3.0.8</version>
+            <type>pom</type>
         </dependency>
 
         <dependency>
@@ -117,6 +118,18 @@
             </plugin>
 
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                    <useFile>false</useFile>
+                    <includes>
+                        <include>**/*Test</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
@@ -141,7 +154,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.6</version>
+                <version>1.12.0</version>
                 <executions>
                     <execution>
                         <goals>
