Add property para jackson aceitar deserializar array json as string

--- a/dog-hero-agendamento-passeio/src/main/resources/application.properties
+++ b/dog-hero-agendamento-passeio/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8082
 aws-endpoint=http://localhost:4566
 aws-region=us-west-2
 spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jackson.deserialization.accept-single-value-as-array=true
 
 
 topico.passeio.criado=PASSEIO_CRIADO
